--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <button id='mylocation'>
             Find my location
         </button>
+
+
+         <button id='find-nearest'>
+            Find Nearest Points
+        </button>
+
+       <input type="hidden"  id='current_marker'>
     </div>
     <div id="filter-container">
         <form class="form-search" class="noSelect" onSubmit="addCsvMarkers(); return false;">
